--- a/website/index.html
+++ b/website/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Mini Project</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Willkommen auf der Webseite der GBS Riethüsl. Hier erfahren Sie mehr über unsere Schule und das Angebot.">
+    <title>GBS Riethüsl</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Hier kannst du ein externes Stylesheet verlinken -->
 </head>
 <body>
-    <h1>Welcome to My Web Server!</h1>
-    <p>This is a simple webpage running inside a Docker container.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Startseite</a></li>
+                <li><a href="#ueber-uns">Über uns</a></li>
+                <li><a href="#angebote">Angebote</a></li>
+                <li><a href="#kontakt">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h1>Willkommen bei der GBS Riethüsl</h1>
+        <p>Die GBS Riethüsl bietet eine Vielzahl von Bildungs- und Freizeitangeboten für Kinder und Jugendliche. Wir legen besonderen Wert auf eine ganzheitliche Entwicklung und Förderung.</p>
+    </section>
+
+    <section id="ueber-uns">
+        <h2>Über uns</h2>
+        <p>Die GBS Riethüsl ist eine Schule/Einrichtung, die sich auf die ganzheitliche Förderung von Kindern spezialisiert hat. Unser Team aus qualifizierten Lehrkräften und Betreuern sorgt dafür, dass jedes Kind individuell unterstützt wird. Unsere Einrichtung bietet eine angenehme und sichere Atmosphäre für Lernende aller Altersgruppen.</p>
+    </section>
+
+    <section id="angebote">
+        <h2>Unsere Angebote</h2>
+        <ul>
+            <li>Ganztägige Betreuung</li>
+            <li>Förderung in verschiedenen Fachbereichen</li>
+            <li>Sport- und Freizeitaktivitäten</li>
+            <li>Kreativ-Workshops</li>
+        </ul>
+    </section>
+
+    <section id="kontakt">
+        <h2>Kontakt</h2>
+        <p>Haben Sie Fragen oder möchten mehr über unsere Angebote erfahren? Kontaktieren Sie uns!</p>
+        <form action="mailto:info@riethuesli.de" method="post" enctype="text/plain">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
+
+            <label for="email">E-Mail:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+
+            <label for="nachricht">Nachricht:</label><br>
+            <textarea id="nachricht" name="nachricht" rows="4" cols="50" required></textarea><br><br>
+
+            <input type="submit" value="Absenden">
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 GBS Riethüsl - Alle Rechte vorbehalten.</p>
+    </footer>
 </body>
 </html>
